--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,221 +1,55 @@
 [package]
-name = "reqwest-examples"
+name = "embassy-tls-example"
 version = "0.1.0"
-rust-version = "1.63.0"
 edition = "2021"
 
-[package.metadata.docs.rs]
-all-features = true
-rustdoc-args = ["--cfg", "docsrs", "--cfg", "reqwest_unstable"]
-targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]
-
-[package.metadata.playground]
-features = [
-    "blocking",
-    "cookies",
-    "json",
-    "multipart",
-]
+[dependencies]
+aes = "0.8.4"
+cfg-if = "1.0.0"
+critical-section = "1.1.2"
+crypto-bigint = { version = "0.5.5", default-features = false }
+elliptic-curve = { version = "0.13.8", default-features = false, features = ["sec1"] }
+embassy-executor = { version = "0.5.0", features = ["task-arena-size-40960"] }
+embassy-futures = "0.1.1"
+embassy-net = { version = "0.4.0", features = ["tcp", "udp", "dhcpv4", "medium-ethernet"] }
+embassy-sync = "0.6.0"
+embassy-time = "0.3.1"
+embedded-nal-async = "0.2.0"
+embedded-tls = "0.17.0"
+esp-alloc = "0.4.0"
+esp-backtrace = { version = "0.13.0", features = ["exception-handler", "panic-handler", "println"] }
+esp-hal = { version = "0.19.0", features = ["log"] }
+esp-hal-embassy = { version = "0.2.0", optional = true }
+esp-hal-smartled = { version = "0.12.0", optional = true }
+esp-ieee802154 = { version = "0.1.0", optional = true }
+esp-println = { version = "0.10.0", features = ["log"] }
+esp-storage = { version = "0.3.0", optional = true }
+esp-wifi = { version = "0.7.1", optional = true }
+fugit = "0.3.7"
+heapless = "0.8.0"
+hex-literal = "0.4.1"
+hmac = { version = "0.12.1", default-features = false }
+portable-atomic = { version = "1.6.0", default-features = false }
+sha2 = { version = "0.10.8", default-features = false }
+smart-leds = "0.4.0"
+smoltcp = { version = "0.11.0", default-features = false, features = ["medium-ethernet", "socket-raw"] }
+static_cell = { version = "2.1.0", features = ["nightly"] }
 
 [features]
-default = ["default-tls", "charset", "http2", "macos-system-configuration", "json"]
+default = ["esp32"]
+esp32 = ["esp-hal/esp32", "esp-backtrace/esp32", "esp-hal-embassy?/esp32", "esp-println/esp32", "esp-storage?/esp32", "esp-wifi?/esp32", "esp-hal-smartled/esp32"]
+esp32c2 = ["esp-hal/esp32c2", "esp-backtrace/esp32c2", "esp-hal-embassy?/esp32c2", "esp-println/esp32c2", "esp-storage?/esp32c2", "esp-wifi?/esp32c2"]
+esp32c3 = ["esp-hal/esp32c3", "esp-backtrace/esp32c3", "esp-hal-embassy?/esp32c3", "esp-println/esp32c3", "esp-storage?/esp32c3", "esp-wifi?/esp32c3", "esp-hal-smartled/esp32c3"]
+esp32c6 = ["esp-hal/esp32c6", "esp-backtrace/esp32c6", "esp-hal-embassy?/esp32c6", "esp-println/esp32c6", "esp-storage?/esp32c6", "esp-wifi?/esp32c6", "esp-hal-smartled/esp32c6", "esp-ieee802154/esp32c6"]
+esp32h2 = ["esp-hal/esp32h2", "esp-backtrace/esp32h2", "esp-hal-embassy?/esp32h2", "esp-println/esp32h2", "esp-storage?/esp32h2", "esp-wifi?/esp32h2", "esp-hal-smartled/esp32h2", "esp-ieee802154/esp32h2"]
+esp32s2 = ["esp-hal/esp32s2", "esp-backtrace/esp32s2", "esp-hal-embassy?/esp32s2", "esp-println/esp32s2", "esp-storage?/esp32s2", "esp-wifi?/esp32s2", "esp-hal-smartled/esp32s2"]
+esp32s3 = ["esp-hal/esp32s3", "esp-backtrace/esp32s3", "esp-hal-embassy?/esp32s3", "esp-println/esp32s3", "esp-storage?/esp32s3", "esp-wifi?/esp32s3", "esp-hal-smartled/esp32s3"]
 
-default-tls = ["dep:hyper-tls", "dep:native-tls-crate", "__tls", "dep:tokio-native-tls"]
-http2 = ["h2", "hyper/http2", "hyper-util/http2", "hyper-rustls?/http2"]
-native-tls = ["default-tls"]
-native-tls-alpn = ["native-tls", "native-tls-crate?/alpn", "hyper-tls?/alpn"]
-native-tls-vendored = ["native-tls", "native-tls-crate?/vendored"]
-rustls-tls = ["rustls-tls-webpki-roots"]
-rustls-tls-no-provider = ["rustls-tls-manual-roots-no-provider"]
-rustls-tls-manual-roots = ["__rustls", "__rustls-ring"]
-rustls-tls-webpki-roots = ["dep:webpki-roots", "hyper-rustls?/webpki-tokio", "__rustls", "__rustls-ring"]
-rustls-tls-native-roots = ["dep:rustls-native-certs", "hyper-rustls?/native-tokio", "__rustls", "__rustls-ring"]
-rustls-tls-manual-roots-no-provider = ["__rustls"]
-blocking = ["dep:futures-channel", "futures-channel?/sink", "futures-util/io", "futures-util/sink", "tokio/sync"]
-charset = ["dep:encoding_rs"]
-cookies = ["dep:cookie_crate", "dep:cookie_store"]
-gzip = ["dep:async-compression", "async-compression?/gzip", "dep:tokio-util"]
-brotli = ["dep:async-compression", "async-compression?/brotli", "dep:tokio-util"]
-zstd = ["dep:async-compression", "async-compression?/zstd", "dep:tokio-util"]
-deflate = ["dep:async-compression", "async-compression?/zlib", "dep:tokio-util"]
-json = ["dep:serde_json"]
-multipart = ["dep:mime_guess"]
-trust-dns = []
-hickory-dns = ["dep:hickory-resolver"]
-stream = ["tokio/fs", "dep:tokio-util", "dep:wasm-streams"]
-socks = ["dep:tokio-socks"]
-macos-system-configuration = ["dep:system-configuration"]
-http3 = ["rustls-tls-manual-roots", "dep:h3", "dep:h3-quinn", "dep:quinn", "dep:slab", "dep:futures-channel"]
-
-__tls = ["dep:rustls-pemfile", "tokio/io-util"]
-__rustls = ["dep:hyper-rustls", "dep:tokio-rustls", "dep:rustls", "__tls", "dep:rustls-pemfile", "dep:rustls-pki-types"]
-__rustls-ring = ["hyper-rustls?/ring", "tokio-rustls?/ring", "rustls?/ring", "quinn?/ring"]
-__internal_proxy_sys_no_cache = []
-
-[dependencies]
-reqwest = { version = "0.12", features = ["json"] }
-tokio = { version = "1", features = ["full"] }
-serde_json = { version = "1.0", optional = true }
-base64 = "0.22"
-http = "1"
-url = "2.4"
-bytes = "1.0"
-serde = "1.0"
-serde_urlencoded = "0.7.1"
-tower-service = "0.3"
-futures-core = { version = "0.3.28", default-features = false }
-futures-util = { version = "0.3.28", default-features = false }
-sync_wrapper = { version = "1.0", features = ["futures"] }
-mime_guess = { version = "2.0", default-features = false, optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
-encoding_rs = { version = "0.8", optional = true }
-http-body = "1"
-http-body-util = "0.1"
-hyper = { version = "1.1", features = ["http1", "client"] }
-hyper-util = { version = "0.1.3", features = ["http1", "client", "client-legacy", "tokio"] }
-h2 = { version = "0.4", optional = true }
-once_cell = "1.18"
-log = "0.4.17"
-mime = "0.3.16"
-percent-encoding = "2.3"
-tokio = { version = "1.0", default-features = false, features = ["net", "time"] }
-pin-project-lite = "0.2.11"
-ipnet = "2.3"
-rustls-pemfile = { version = "2", optional = true }
-hyper-tls = { version = "0.6", optional = true }
-native-tls-crate = { version = "0.2.10", optional = true, package = "native-tls" }
-tokio-native-tls = { version = "0.3.0", optional = true }
-hyper-rustls = { version = "0.27.0", default-features = false, optional = true, features = ["http1", "tls12"] }
-rustls = { version = "0.23.4", optional = true, default-features = false, features = ["std", "tls12"] }
-rustls-pki-types = { version = "1.1.0", features = ["alloc"] ,optional = true }
-tokio-rustls = { version = "0.26", optional = true, default-features = false, features = ["tls12"] }
-webpki-roots = { version = "0.26.0", optional = true }
-rustls-native-certs = { version = "0.7", optional = true }
-cookie_crate = { version = "0.18.0", package = "cookie", optional = true }
-cookie_store = { version = "0.21.0", optional = true }
-async-compression = { version = "0.4.0", default-features = false, features = ["tokio"], optional = true }
-tokio-util = { version = "0.7.9", default-features = false, features = ["codec", "io"], optional = true }
-tokio-socks = { version = "0.5.1", optional = true }
-hickory-resolver = { version = "0.24", optional = true, features = ["tokio-runtime"] }
-h3 = { version = "0.0.5", optional = true }
-h3-quinn = { version = "0.0.6", optional = true }
-quinn = { version = "0.11.1", default-features = false, features = ["rustls", "runtime-tokio"], optional = true }
-slab = { version = "0.4.9", optional = true }
-futures-channel = { version = "0.3", optional = true }
-
-[target.'cfg(not(target_arch = "wasm32"))'.dev-dependencies]
-env_logger = "0.10"
-hyper = { version = "1.1.0", default-features = false, features = ["http1", "http2", "client", "server"] }
-hyper-util = { version = "0.1.3", features = ["http1", "http2", "client", "client-legacy", "server-auto", "tokio"] }
-serde = { version = "1.0", features = ["derive"] }
-libflate = "1.0"
-brotli_crate = { package = "brotli", version = "3.3.0" }
-zstd_crate = { package = "zstd", version = "0.13" }
-doc-comment = "0.3"
-tokio = { version = "1.0", default-features = false, features = ["macros", "rt-multi-thread"] }
-futures-util = { version = "0.3.28", default-features = false, features = ["std", "alloc"] }
-rustls = { version = "0.23", default-features = false, features = ["ring"] }
-
-[target.'cfg(windows)'.dependencies]
-winreg = "0.52.0"
-
-[target.'cfg(target_os = "macos")'.dependencies]
-system-configuration = { version = "0.5.1", optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies]
-js-sys = "0.3.45"
-serde_json = "1.0"
-wasm-bindgen = "0.2.68"
-wasm-bindgen-futures = "0.4.18"
-wasm-streams = { version = "0.4", optional = true }
-
-[target.'cfg(target_arch = "wasm32")'.dependencies.web-sys]
-version = "0.3.28"
-features = [
-    "AbortController",
-    "AbortSignal",
-    "Headers",
-    "Request",
-    "RequestInit",
-    "RequestMode",
-    "Response",
-    "Window",
-    "FormData",
-    "Blob",
-    "BlobPropertyBag",
-    "ServiceWorkerGlobalScope",
-    "RequestCredentials",
-    "File",
-    "ReadableStream"
-]
-
-[target.'cfg(target_arch = "wasm32")'.dev-dependencies]
-wasm-bindgen = { version = "0.2.68", features = ["serde-serialize"] }
-wasm-bindgen-test = "0.3"
-
-[lints.rust]
-unexpected_cfgs = { level = "warn", check-cfg = ['cfg(reqwest_unstable)'] }
-
-[[example]]
-name = "blocking"
-path = "examples/blocking.rs"
-required-features = ["blocking"]
-
-[[example]]
-name = "json_dynamic"
-path = "examples/json_dynamic.rs"
-required-features = ["json"]
-
-[[example]]
-name = "json_typed"
-path = "examples/json_typed.rs"
-required-features = ["json"]
-
-[[example]]
-name = "tor_socks"
-path = "examples/tor_socks.rs"
-required-features = ["socks"]
-
-[[example]]
-name = "form"
-path = "examples/form.rs"
-
-[[example]]
-name = "simple"
-path = "examples/simple.rs"
-
-[[test]]
-name = "blocking"
-path = "tests/blocking.rs"
-required-features = ["blocking"]
-
-[[test]]
-name = "cookie"
-path = "tests/cookie.rs"
-required-features = ["cookies"]
-
-[[test]]
-name = "gzip"
-path = "tests/gzip.rs"
-required-features = ["gzip", "stream"]
-
-[[test]]
-name = "brotli"
-path = "tests/brotli.rs"
-required-features = ["brotli", "stream"]
-
-[[test]]
-name = "zstd"
-path = "tests/zstd.rs"
-required-features = ["zstd", "stream"]
-
-[[test]]
-name = "deflate"
-path = "tests/deflate.rs"
-required-features = ["deflate", "stream"]
-
-[[test]]
-name = "multipart"
-path = "tests/multipart.rs"
-required-features = ["multipart"]
+[profile.release]
+codegen-units = 1
+debug = 2
+debug-assertions = false
+incremental = false
+opt-level = 3
+lto = "fat"
+overflow-checks = false
